# python-anyconfig-cbor2-backend

./: .travis.yml  MANIFEST.in  NEWS  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
anyconfig_cbor2_backend/: __init__.py  cbor2.py
extras/: cbor2-hardcode-version.patch
pkg/: entry_points.txt  nose.cfg  package.spec.in  requirements.txt  test_requirements.txt
src/anyconfig_cbor2_backend/: __init__.py  cbor2_.py
tests/: base.py  cbor2.py  cbor2_.py  plugin.py  test_plugin.py
tests/backend/: cbor2.py  plugin.py
